# zero-explore

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  components.tsx  styles.css  types.ts
